[gd_scene load_steps=11 format=3 uid="uid://cwm86lmxptsck"]

[ext_resource type="Script" path="res://scene/crafting_bench/popup_crafting.gd" id="1_12lsl"]
[ext_resource type="Theme" uid="uid://d1nkmrepinfb0" path="res://scene/menu/menu.tres" id="1_actys"]
[ext_resource type="Texture2D" uid="uid://baqlshr3lgy82" path="res://assets/UI/Sheet/UI Big Play Button.png" id="1_ujsap"]
[ext_resource type="Script" path="res://scene/crafting_bench/panel/crafting_panel.gd" id="4_vx4ov"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hk0np"]
atlas = ExtResource("1_ujsap")
region = Rect2(3, 2, 90, 27)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fmh87"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_la4ca"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sr7m1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5xqge"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gt2wb"]

[node name="PopupCrafting" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_12lsl")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -41.0
offset_right = 105.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_hk0np")

[node name="ProductName" type="Label" parent="."]
layout_mode = 0
offset_left = -91.0
offset_top = -35.0
offset_right = -17.0
offset_bottom = -18.0
theme = ExtResource("1_actys")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "Bread"

[node name="Container" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.5
offset_top = -13.5
offset_right = 95.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2

[node name="Resources" type="HBoxContainer" parent="Container"]
layout_mode = 2

[node name="Slot1" type="HBoxContainer" parent="Container/Resources"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
script = ExtResource("4_vx4ov")

[node name="Panel" type="Panel" parent="Container/Resources/Slot1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_fmh87")

[node name="Label" type="Label" parent="Container/Resources/Slot1"]
layout_mode = 2
theme = ExtResource("1_actys")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "+"

[node name="Slot2" type="HBoxContainer" parent="Container/Resources"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("4_vx4ov")

[node name="Panel" type="Panel" parent="Container/Resources/Slot2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_la4ca")

[node name="Label" type="Label" parent="Container/Resources/Slot2"]
layout_mode = 2
theme = ExtResource("1_actys")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "+"

[node name="Slot3" type="HBoxContainer" parent="Container/Resources"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("4_vx4ov")

[node name="Panel" type="Panel" parent="Container/Resources/Slot3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_sr7m1")

[node name="Label" type="Label" parent="Container/Resources/Slot3"]
layout_mode = 2
theme = ExtResource("1_actys")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "+"

[node name="Slot4" type="HBoxContainer" parent="Container/Resources"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
script = ExtResource("4_vx4ov")

[node name="Panel" type="Panel" parent="Container/Resources/Slot4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_5xqge")

[node name="Label" type="Label" parent="Container/Resources/Slot4"]
layout_mode = 2
theme = ExtResource("1_actys")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "="

[node name="Result" type="HBoxContainer" parent="Container/Resources"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("4_vx4ov")

[node name="Panel" type="Panel" parent="Container/Resources/Result"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_gt2wb")

[node name="BtnCraft" type="Button" parent="."]
layout_mode = 0
offset_left = 114.0
offset_top = -30.0
offset_right = 192.0
offset_bottom = 46.0
scale = Vector2(0.7, 0.7)
theme = ExtResource("1_actys")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.74902, 0.74902, 0.74902, 0.6)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
text = "    Craft   "

[connection signal="pressed" from="BtnCraft" to="." method="_on_btn_craft_pressed"]
